<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".AddEmployeeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/tambah_data_pegawai"

        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginTop="30dp"

        android:hint="@string/masukan_nama"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginTop="10dp"

        android:hint="@string/masukan_email"/>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginTop="10dp"

        android:hint="@string/masukan_umur"/>

    <EditText
        android:id="@+id/etSalary"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginTop="10dp"

        android:hint="@string/masukan_pendapatan_rp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="48dp"

        android:layout_marginTop="20dp"

        android:layout_gravity="center_horizontal"

        android:text="@string/simpan"/>

</LinearLayout>