<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    android:layout_height="wrap_content"

    android:orientation="vertical"

    android:padding="16dp">

    <EditText
        android:id="@+id/etEmpName"

        android:layout_width="match_parent"

        android:layout_height="48dp"

        android:layout_marginTop="20dp"

        android:hint="@string/masukan_nama"

        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etEmpEmail"

        android:layout_width="match_parent"

        android:layout_height="48dp"

        android:layout_marginTop="16dp"

        android:hint="@string/masukan_email"

        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etEmpAge"

        android:layout_width="match_parent"

        android:layout_height="48dp"

        android:layout_marginTop="16dp"

        android:hint="@string/masukan_umur"

        android:inputType="numberSigned"/>

    <EditText
        android:id="@+id/etEmpSalary"

        android:layout_width="match_parent"

        android:layout_height="48dp"

        android:layout_marginTop="16dp"

        android:hint="@string/masukan_pendapatan_rp"

        android:inputType="numberSigned"/>

    <Button
        android:id="@+id/btnSave"

        android:layout_width="150dp"

        android:layout_height="wrap_content"

        android:text="@string/simpan"

        android:layout_marginTop="20dp"

        android:layout_gravity="center_horizontal"/>

</LinearLayout>