<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:padding="16dp"

    tools:context=".EmployeeDetailActivity">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical"

            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_item_photo"

                android:layout_width="200dp"

                android:layout_height="200dp"

                android:contentDescription="@string/employee_logo"

                android:scaleType="centerInside"

                android:layout_marginTop="30dp"

                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                tools:src="@drawable/photo"/>

            <TextView
                android:id="@+id/tv_name"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/employee_name"

                android:textStyle="bold"

                android:textSize="20sp"

                android:layout_marginTop="10dp"/>

            <TableLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/id"

                        android:layout_weight="0.3"/>

                    <TextView
                        android:id="@+id/tv_id"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/employee_id"

                        android:layout_weight="0.7"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:weightSum="1"

                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/email"

                        android:layout_weight="0.3"/>

                    <TextView
                        android:id="@+id/tv_email"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/employee_email"

                        android:layout_weight="0.7"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:weightSum="1"

                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/umur"

                        android:layout_weight="0.3"/>

                    <TextView
                        android:id="@+id/tv_age"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/employee_age"

                        android:layout_weight="0.7"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:weightSum="1"

                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/pendapatan_rp"

                        android:layout_weight="0.3"/>

                    <TextView
                        android:id="@+id/tv_salary"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/employee_salary"

                        android:layout_weight="0.7"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:weightSum="1"

        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_update"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/ubah_data"

            android:layout_weight="0.5"/>

        <Space
            android:layout_width="10dp"

            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_delete"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/hapus_data"

            android:layout_weight="0.5"/>

    </LinearLayout>

</RelativeLayout>